# calibre-web

./: .gitlab-ci.yml  Dockerfile  README.md  calibre-web.py  flake.nix  justfile  messages.pot  pyproject.toml  setup.cfg.bak
calibre-web/: __init__.py  cli.py  cover.py  file_helper.py  gdriveutils.py  render_template.py  server.py
calibre-web/metadata_provider/: amazon.py  comicvine.py  douban.py  google.py  lubimyczytac.py  scholar.py
calibre-web/services/: Metadata.py  worker.py
calibre-web/tasks/: convert.py  database.py  mail.py  tempFolder.py  thumbnail.py
calibre-web/translations/de/LC_MESSAGES/: messages.po
calibre-web/translations/el/LC_MESSAGES/: messages.po
calibre-web/translations/fi/LC_MESSAGES/: messages.po
calibre-web/translations/fr/LC_MESSAGES/: messages.po
calibre-web/translations/gl/LC_MESSAGES/: messages.po
calibre-web/translations/ja/LC_MESSAGES/: messages.po
calibre-web/translations/km/LC_MESSAGES/: messages.po
calibre-web/translations/nl/LC_MESSAGES/: messages.po
calibre-web/translations/pl/LC_MESSAGES/: messages.po
calibre-web/translations/tr/LC_MESSAGES/: messages.po
calibre-web/translations/vi/LC_MESSAGES/: messages.po
calibre-web/translations/zh_Hans_CN/LC_MESSAGES/: messages.po
calibre-web/translations/zh_Hant_TW/LC_MESSAGES/: messages.po
calibre_web/: MyLoginManager.py  __init__.py  __main__.py  about.py  admin.py  app.py  babel.py  cache_buster.py  cli.py  comic.py  config_sql.py  constants.py  converter.py  cover.py  db.py  debug_info.py  editbooks.py  epub.py  epub_helper.py  error_handler.py  fb2.py  file_helper.py  fs.py  gdrive.py  gevent_wsgi.py  helper.py  isoLanguages.py  iso_language_names.py  jinjia.py  kobo.py  kobo_auth.py  kobo_sync_status.py  logger.py  oauth.py  oauth_bb.py  opds.py  pagination.py  redirect.py  remotelogin.py  render_template.py  (+14 more)
calibre_web/calibre_web/: __init__.py  babel.py  cli.py  error_handler.py  search_metadata.py  tasks_status.py  updater.py
calibre_web/calibre_web/services/: simpleldap.py
calibre_web/calibre_web/tasks/: mail.py  tempFolder.py
calibre_web/calibre_web/translations/it/LC_MESSAGES/: messages.po
calibre_web/calibre_web/translations/pt_BR/LC_MESSAGES/: messages.po
calibre_web/calibre_web/translations/sk/LC_MESSAGES/: messages.po
calibre_web/calibre_web/translations/sv/LC_MESSAGES/: messages.po
calibre_web/metadata_provider/: amazon.py  comicvine.py  douban.py  google.py  lubimyczytac.py  scholar.py
calibre_web/services/: Metadata.py  SyncToken.py  __init__.py  background_scheduler.py  worker.py
calibre_web/tasks/: convert.py  database.py  mail.py  metadata_backup.py  tempFolder.py  thumbnail.py  upload.py
calibre_web/templates/: admin.html  config_db.html  layout.html  readcbr.html  readtxt.html  shelfdown.html
calibre_web/translations/cs/LC_MESSAGES/: messages.po
calibre_web/translations/es/LC_MESSAGES/: messages.po
calibre_web/translations/id/LC_MESSAGES/: messages.po
calibre_web/translations/no/LC_MESSAGES/: messages.po
calibre_web/translations/pt/LC_MESSAGES/: messages.po
calibre_web/translations/ru/LC_MESSAGES/: messages.po
calibre_web/translations/uk/LC_MESSAGES/: messages.po
cps/: MyLoginManager.py  __init__.py  about.py  admin.py  babel.py  cache_buster.py  cli.py  comic.py  config_sql.py  constants.py  converter.py  db.py  debug_info.py  dep_check.py  editbooks.py  epub.py  epub_helper.py  error_handler.py  fb2.py  file_helper.py  fs.py  gdrive.py  gdriveutils.py  gevent_wsgi.py  helper.py  isoLanguages.py  jinjia.py  kobo.py  kobo_auth.py  kobo_sync_status.py  logger.py  main.py  oauth.py  oauth_bb.py  opds.py  pagination.py  redirect.py  remotelogin.py  render_template.py  reverseproxy.py  (+13 more)
cps/metadata_provider/: amazon.py  comicvine.py  douban.py  google.py  lubimyczytac.py  scholar.py
cps/services/: Metadata.py  SyncToken.py  __init__.py  background_scheduler.py  gmail.py  goodreads_support.py  simpleldap.py  worker.py
cps/tasks/: convert.py  database.py  mail.py  metadata_backup.py  tempFolder.py  thumbnail.py  upload.py
cps/templates/: config_edit.html
root/etc/services.d/calibre-web/: run
src/calibre_web/: __init__.py  __main__.py  about.py  admin.py  cli.py  config_sql.py  constants.py  db.py  editbooks.py  error_handler.py  helper.py  jinjia.py  oauth_bb.py  search_metadata.py  tornado_wsgi.py  updater.py  uploader.py  usermanagement.py  web.py
src/calibre_web/metadata_provider/: comicvine.py
src/calibre_web/services/: __init__.py  background_scheduler.py  goodreads_support.py
src/calibre_web/static/js/: main.js
src/calibre_web/tasks/: convert.py  mail.py  metadata_backup.py  thumbnail.py  upload.py
src/calibre_web/templates/: config_edit.html  email_edit.html  http_error.html  listenmp3.html  login.html  read.html  readdjvu.html  readpdf.html  register.html
src/calibre_web/translations/hu/LC_MESSAGES/: messages.po
src/calibre_web/translations/ko/LC_MESSAGES/: messages.po
test/: Calibre-Web TestSummary_Linux.html  Calibre-Web TestSummary_Windows.html
tests/: test_about.py
