[project]
requires-python = ">=3.8,<4.0"

[tool.poetry]
name = "calibreweb"
version = "0.6.22b"
description = "Web app for browsing, reading and downloading eBooks stored in a Calibre database."
authors = [
    "OzzieIsaacs <Ozzie.Fernandez.Isaacs@googlemail.com>",
    "Shadow53 <shadow53@shadow53.com>",
]
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: GNU Affero General Public License v3",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.6",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Operating System :: OS Independent"
]
keywords = ["calibre", "calibre-web", "library"]
packages = [
  { include = "calibre_web" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Werkzeug = "<3.0.0"
APScheduler = ">=3.6.3,<3.11.0"
Babel = ">=1.3,<3.0"
Flask-Babel = ">=0.11.1,<4.1.0"
Flask-Login = ">=0.3.2,<0.6.3"
Flask-Principal = ">=0.3.2,<0.5.1"
Flask = ">=1.0.2,<2.4.0"
iso-639 = "^0.4.5"
PyPDF = ">=3.0.0,<3.16.0"
pytz = ">=2016.10"
requests = ">=2.28.0,<2.32.0"
SQLAlchemy = ">=1.3.0,<2.1.0"
tornado = ">=6.3,<6.4"
Wand = ">=0.4.4,<0.7.0"
unidecode = ">=0.04.19,<1.4.0"
lxml = ">=3.8.0,<5.0.0"
flask-wtf = ">=0.14.2,<1.3.0"
chardet = ">=3.0.0,<4.1.0"
advocate = ">=1.0.0,<1.1.0"
Flask-Limiter = ">=2.3.0,<3.6.0"
google-api-python-client = { version = ">=1.7.11,<2.108.0", optional = true }
gevent = { version = ">20.6.0,<24.0.0", optional = true }
greenlet = { version = ">=0.4.17,<3.1.0", optional = true }
httplib2 = { version = ">=0.9.2,<0.23.0", optional = true }
oauth2client = { version = ">=4.0.0,<4.1.4", optional = true }
uritemplate = { version = ">=3.0.0,<4.2.0", optional = true }
pyasn1-modules = { version = ">=0.0.8,<0.4.0", optional = true }
pyasn1 = { version = ">=0.1.9,<0.6.0", optional = true }
PyDrive2 = { version = ">=1.3.1,<1.18.0", optional = true }
PyYAML = { version = ">=3.12,<6.1", optional = true }
rsa = { version = ">=3.4.2,<4.10.0", optional = true }
google-auth-oauthlib = { version = ">=0.4.3,<1.1.0", optional = true }
goodreads = { version = ">=0.3.2,<0.4.0", optional = true }
python-Levenshtein = { version = ">=0.12.0,<0.22.0", optional = true }
python-ldap = { version = ">=3.0.0,<3.5.0", optional = true }
Flask-SimpleLDAP = { version = ">=1.4.0,<1.5.0", optional = true }
Flask-Dance = { version = ">=2.0.0,<7.1.0", optional = true }
SQLAlchemy-Utils = { version = ">=0.33.5,<0.42.0", optional = true }
rarfile = { version = ">=3.2", optional = true }
scholarly = { version = ">=1.2.0,<1.8", optional = true }
markdown2 = { version = ">=2.0.0,<2.5.0", optional = true }
html2text = { version = ">=2020.1.16,<2022.1.1", optional = true }
python-dateutil = { version = ">=2.1,<2.9.0", optional = true }
beautifulsoup4 = { version = ">=4.0.1,<4.13.0", optional = true }
faust-cchardet = { version = ">=2.1.18,<2.1.20", optional = true }
py7zr = { version = ">=0.15.0,<0.21.0", optional = true }
natsort = { version = ">=2.2.0,<8.5.0", optional = true }
comicapi = { version = ">=2.2.0,<3.3.0", optional = true }
jsonschema = { version = ">=3.2.0,<4.22.0", optional = true }
flask-oidc = "^2.1.1"

[tool.poetry.extras]
gdrive = [
	"google-api-python-client",
	"gevent",
	"greenlet",
	"httplib2",
	"oauth2client",
	"uritemplate",
	"pyasn1-modules",
	"pyasn1",
	"PyDrive2",
	"PyYAML",
	"rsa",
] 
gmail =  [
	"google-auth-oauthlib",
	"google-api-python-client",
]
goodreads = [
	"goodreads",
	"python-Levenshtein",
]
ldap = [
	"python-ldap",
	"Flask-SimpleLDAP",
]
oauth = [
	"Flask-Dance",
	"SQLAlchemy-Utils",
]
metadata = [
	"rarfile",
	"scholarly",
	"markdown2",
	"html2text",
	"python-dateutil",
	"beautifulsoup4",
	"faust-cchardet",
	"py7zr",
]
comics = [
	"natsort",
	"comicapi",
]
kobo = [
	"jsonschema",
]

[tool.poetry.scripts]
calibre-web = "calibre_web:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
ruff = "^0.2.2"
mypy = "^1.8.0"
black = "^24.2.0"
pydocstyle = "^6.3.0"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pydocstyle]
convention = "pep257"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = false
report_progress = true

[tool.ruff]
line-length = 120
indent-width = 4
fix = true
src = ["calibre-web"]

[tool.ruff.lint]
# TODO: T20 disallows print statements
select = ["E", "F", "UP", "W", "C90", "B", "I", "SIM", "N", "D", "YTT", "ANN", "ASYNC", "S", "BLE", "FBT", "A", "C4",
"DTZ", "EM", "EXE", "FA", "ISC", "ICN", "G", "PIE", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "TCH", "ARG",
"PTH", "TD", "FIX", "ERA", "PL", "TRY", "FLY", "PERF", "FURB", "LOG", "RUF"]
ignore = ["D211", "D213", "ISC001"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
typing-modules = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

